# pygments-httpie

./: README.md  setup.cfg
pygments_httpie/: __init__.py  http.py  httpie.py
scripts/: demo.py
