[metadata]
name = pygments-httpie
version = 0.1rc1
description =  A Pygments lexer for the the output of httpie.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realpython/pygments-http
author = Real Python
author_email = info@realpython.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
keywords =
    lexer
    http
    httpie

[options]
install_requires = pygments
python_requires = >=3.5
packages = pygments_httpie

[options.entry_points]
pygments.lexers =
    http=pygments_http:HttpLexer
